# Auto4DSTEM

./: .buildinfo  .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Experimental_label_weights_affine_para  LICENSE.txt  MANIFEST.in  README.rst  _config.yml  _toc.yml  authors.html  changelog.html  contributing.html  data.npy  genindex.html  index.html  license.html  nrp_gitlab_readme.md  objects.inv  py-modindex.html  readme.html  requirement.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  simulated_label_weights_affine_para  test_file.h5  tox.ini
.github/workflows/: main.yml
_build/.doctrees/: AUTHORS.doctree  CHANGELOG.doctree  CONTRIBUTING.doctree  README.doctree  environment.pickle
_build/.doctrees/content/: Auto4DSTEM_Tutorial_Supplemental_Material_Experimental_4DSTEM_update_011325_github-Copy1.doctree  Auto4DSTEM_Tutorial_Supplemental_Material_Experimental_4DSTEM_update_011325_github.doctree  Auto4DSTEM_Tutorial_Supplemental_Material_Experimental_4DSTEM_update_051024.doctree  Auto4DSTEM_Tutorial_Supplemental_Material_Simulated_4DSTEM_update_011325_github.doctree  Figure_generated_main_content_011325_github.doctree  intro.doctree
_build/.doctrees/docs/: authors.doctree  changelog.doctree  contributing.doctree  index.doctree  license.doctree  readme.doctree
_build/.doctrees/docs/api/: auto4dstem.Data.doctree  auto4dstem.Viz.doctree  auto4dstem.doctree  auto4dstem.nn.doctree  modules.doctree
_build/html/: .buildinfo  AUTHORS.html  CHANGELOG.html  README.html  genindex.html  objects.inv  search.html  searchindex.js
_build/html/content/: Auto4DSTEM_Tutorial_Supplemental_Material_Experimental_4DSTEM_update_011325_github.html  Auto4DSTEM_Tutorial_Supplemental_Material_Simulated_4DSTEM_update_011325_github.html  Figure_generated_main_content_011325_github.html  intro.html
_build/html/docs/: authors.html  changelog.html  contributing.html  index.html  license.html  readme.html
_build/jupyter_execute/content/: Figure_generated_main_content_011325_github.ipynb
_modules/: index.html
_modules/auto4dstem/Data/: DataProcess.html
_modules/auto4dstem/Viz/: util.html  viz.html
_modules/auto4dstem/nn/: CC_ST_AE.html  Loss_Function.html  Train_Function.html
_sources/api/: auto4dstem.Data.rst.txt  auto4dstem.Viz.rst.txt  auto4dstem.nn.rst.txt  auto4dstem.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: auto4dstem.Data.html  auto4dstem.Viz.html  auto4dstem.html  auto4dstem.nn.html  modules.html
content/: 01_Auto4DSTEM_simulated.ipynb  intro.rst
docker/: Dockerfile
docs/: conf.py  index.rst  requirements.txt
k8s_deployment/: GPU_POD.yaml  auto4dstem.yaml  deployment.yaml  ingress.yaml  service.yaml
src/auto4dstem/: __init__.py  skeleton.py
src/auto4dstem/Data/: DataProcess.py  __init__.py
src/auto4dstem/Viz/: __init__.py  util.py  viz.gv  viz.py
src/auto4dstem/VizUtil/: util.py  viz.py
src/auto4dstem/calculations/: noise.py
src/auto4dstem/data/: DataProcess.gv  DataProcess.py
src/auto4dstem/masks/: __init__.py  masks.py
src/auto4dstem/nn/: CC_ST_AE.gv  CC_ST_AE.py  Loss_Function.py  Train_Function.py  __init__.py  loss_function.gv
src/auto4dstem/viz/: util.py  viz.py
tests/: conftest.py  test_DataProcess.py  test_MAE_diff_with_Label.py  test_Strain_Compare.py  test_TrainClass.py  test_add_colorbar.py  test_add_disturb.py  test_affine_transform.py  test_basis2probe.py  test_cal_diff.py  test_center_mask_list_function.py  test_center_of_mass.py  test_compare_rotation.py  test_conv_iden_block.py  test_crop_small_square.py  test_data_translated.py  test_encoder_decoder_joint.py  test_find_nearby_dot_group.py  test_generate_classification.py  test_hist_plotter.py  test_inverse_base.py  test_loss_function.py  test_mask_class.py  test_mask_function.py  test_normalized_strain_matrices.py  test_real_strain_viz.py  test_revise_size_on_affine_gpu.py  test_rotate_mask_list.py  test_select_points.py  test_show_process.py  test_skeleton.py  test_stem4d_dataset.py  test_strain_tensor.py  test_strrain_tensor_for_real.py  test_translate_base.py  test_upsample_mask.py  test_upsample_single_mask.py  test_visual_performance_plot.py  test_visual_rotation.py  test_visual_strain_magnitude.py  (+2 more)
(+10 files in other folders)
